[#209] refactor(UserFindAllResponse): User 조회 응답 DTO를 Nested Record로 리팩토링